2013-04-16  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --isa-v1, --isa-v2 and --config-extra options
	to set ISA_CPU and CONFIG_EXTRA environment variables.
	* build-elf32.sh, build-uclibc.sh: Make use of ISA_CPU and
	CONFIG_EXTRA environment variables.
	* build-kernel.sh: Updated for 4.8 Linux build/

2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-all-sh: New script.
	* diff-tests.sh: Remove redundant code.

2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-tests.sh: New script.

2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-tests.sh: New script.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* tag-release.sh: New script.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Allow --little-endian as an option
	* run-tests.sh: Tidy up commenting.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh, run-uclibc-tests.sh: Create README in the
	results directory with details of the test run.
	* dejagnu/baseboards/arc-linux-aa4.exp: Correct env variable
	specifying target IP address to ARC_TEST_ADDR_UCLIBC.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Add --multilib-options and --little-endian
	* run-elf32-tests.sh, run-uclibc-tests.sh: Add comment regarding
	the ARC_MULTILIB_OPTIONS environment variable.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-sim-mdb.exp: Deleted.
	* arc-sim-base.exp: Merged into arc-sim.exp
	* arc-sim.exp: Incorporate arc-sim-base.exp, add correct licensing
	header, allow multilib options to be specified by environment
	variable.

2013-04-02  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Bump uClibc version to arc_4_8-uclibc-mainline-dev.

2013-03-29  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Bump binutils version to 2.23.2.

2013-03-28  Jeremy Bennett <jeremy.bennett@embecosm.com>
